# atcoder

./: .gitmodules  Cargo.toml  README.md  cargo-atcoder.yaml.template  compete.toml  flake.nix  justfile  rust-toolchain.toml
abc158/: Cargo.toml
abc180/: Cargo.toml
abc186/: Cargo.toml
abc190/: Cargo.toml
abc191/: Cargo.toml
abc192/: Cargo.toml
abc197/: Cargo.toml
abc199/: Cargo.toml
abc201/: Cargo.toml
abc203/: Cargo.toml
abc278/: Cargo.toml
agc013/: Cargo.toml
agc024/: Cargo.toml
agc024/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
agc026/: Cargo.toml
agc026/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
agc039/: Cargo.toml
agc040/: Cargo.toml
contests/abc278/: Cargo.toml
nikkei2019-final/: Cargo.toml
nikkei2019-final/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml  h.yml
past202104-open/: Cargo.toml
past202104-open/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml  h.yml  i.yml  j.yml  k.yml  l.yml  m.yml  n.yml  o.yml
practice/: Cargo.toml
scripts/: prepare.sh
